--- a/challenge3/index.html
+++ b/challenge3/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fare Estimator</title>
+  <meta charset="UTF-8">
+  <title>Fee Estimator</title>
 </head>
 <body>
-  <h1>Fare Estimator</h1>
-  <p>Open console, then enter your trip distance when prompted.</p>
-  <script src="index.js"></script>
+  <h2>Mobile Money Transaction Fee Estimator</h2>
+  <p>check console</p>
+
+  <!-- Link to external script file -->
+  <script src="fee-estimator.js"></script>
 </body>
 </html>
