--- a/challenge3/index.html
+++ b/challenge3/index.html
@@ -9,6 +9,6 @@
   <p>check console</p>
 
   <!-- Link to external script file -->
-  <script src="fee-estimator.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
